clinicops-yaml/03-voice-api.yaml
<<<<<<< HEAD
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voice-api
  namespace: clinicops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voice-api
  template:
    metadata:
      labels:
        app: voice-api
    spec:
      containers:
      - name: voice-api
        image: clinicopsacr.azurecr.io/voice-api:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: voice-api
  namespace: clinicops
spec:
  selector:
    app: voice-api
  ports:
  - port: 80
=======
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voice-api
  namespace: clinicops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voice-api
  template:
    metadata:
      labels:
        app: voice-api
    spec:
      containers:
      - name: voice-api
        image: clinicopsacr.azurecr.io/voice-api:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: voice-api
  namespace: clinicops
spec:
  selector:
    app: voice-api
  ports:
  - port: 80
>>>>>>> 36e5237e7bffa008bd28b6e3306650c9ec2bb671
    targetPort: 8080
